# Design-of-Algorithms

./: .gitignore  CMakeLists.txt  README.md
Disjoint-Set/: .gitignore  diset.c  diset.h  main.c
Homework-1/4/: CMakeLists.txt
Homework-1/4/doc/: complexity.md
Homework-1/4/src/: CMakeLists.txt  main.c  qsort.c  qsort.h
Homework-2/3/: .gitignore  combination.c  combination.h  main.c
Homework-3/4/: .gitignore  common.c  common.h  input.txt  main.c  minmult.c  minmult.h
Homework-6/2/: .gitignore  fknapsack.c  fknapsack.h  main.c  object.c  object.h
Kurskal/: .gitignore  diset.c  diset.h  edge.c  edge.h  kurskal.c  kurskal.h  main.c
Long-Common-Substring/: CMakeLists.txt
Long-Common-Substring/src/: CMakeLists.txt  lcs.c  lcs.h  main.c
N-Queen/: CMakeLists.txt
N-Queen/src/: CMakeLists.txt  main.c  n-queen.c  n-queen.h
SUT-Project-1/src/: main.c
SUT-Project-2/src/: inout-1.txt  main.c
Set/: main.c  set.c  set.h
SkyLine/doc/: TODOlist.md
SkyLine/src/: building.h  gui.c  gui.h  input-1.txt  input-2.txt  input-3.txt  input-4.txt  main.c  output-1.txt  output-2.txt  output-3.txt  output-4.txt  skyliner.c  skyliner.h
Subsets-Sum/: CMakeLists.txt
Subsets-Sum/src/: CMakeLists.txt  main.c  subsets-sum.c  subsets-sum.h
Travelling-Salesman-Problem/src/: input-1.txt  main.c  tsp.c  tsp.h
