# In The Name Of God
# ========================================
# [] File Name : CMakeLists.txt
#
# [] Creation Date : 08-05-2015
#
# [] Created By : Tara Tandel (Tara.Tandel.94@gmail.com)
# =======================================
cmake_minimum_required (VERSION 2.6)

add_subdirectory (Subsets-Sum)
add_subdirectory (N-Queen)
add_subdirectory (Homework-1/4)
add_subdirectory (Long-Common-Substring)