# In The Name Of God
# ========================================
# [] File Name : CMakeLists.txt
#
# [] Creation Date : 08-05-2015
#
# [] Created By : Tara Tandel (Tara.tandel.94@gmail.com)
# =======================================
add_executable (N-Queen.out main.c n-queen.c ../../Subsets-Sum/src/subsets-sum.h ../../Subsets-Sum/src/subsets-sum.c)
